<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item android:title="Nevegació">
            <menu>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/productFragment"
            android:icon="@drawable/ic_food_basket"
            android:title="@string/categorias" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
            </menu>
        </item>


        <item android:title="Usuari">
            <menu>
                <item
                    android:id="@+id/authActivity"
                    android:icon="@drawable/common_full_open_on_phone"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/ajustes" />
                <item
                    android:id="@+id/aboutFragment"
                    android:icon="@drawable/ic_about"
                    android:title="@string/acerca_de" />
            </menu>
        </item>
    </group>

</menu>